@@ -18,6 +18,7 @@
 package org.apache.cassandra.tools.nodetool;
 
 import io.airlift.command.Command;
+import io.airlift.command.Option;
 
 import org.apache.cassandra.tools.NodeProbe;
 import org.apache.cassandra.tools.NodeTool.NodeToolCmd;
@@ -25,12 +26,18 @@ import org.apache.cassandra.tools.NodeTool.NodeToolCmd;
 @Command(name = "decommission", description = "Decommission the *node I am connecting to*")
 public class Decommission extends NodeToolCmd
 {
+
+    @Option(title = "force",
+    name = {"-f", "--force"},
+    description = "Force decommission of this node even when it reduces the number of replicas to below configured RF")
+    private boolean force = false;
+
     @Override
     public void execute(NodeProbe probe)
     {
         try
         {
-            probe.decommission();
+            probe.decommission(force);
         } catch (InterruptedException e)
         {
             throw new RuntimeException("Error decommissioning node", e);
